feat: added endpoints to manage locations

--- a/templates/admin/admin_dashboard.html
+++ b/templates/admin/admin_dashboard.html
@@ -39,9 +39,9 @@
         <div class="col-md-4">
             <div class="card border-info shadow-sm">
                 <div class="card-body">
-                    <h5 class="card-title">User Management</h5>
-                    <p class="card-text">View all registered users and their data.</p>
-                    <a href="{{ url_for('admin.manage_users') }}" class="btn btn-info">Go</a>
+                    <h5 class="card-title">Manage Locations</h5>
+                    <p class="card-text">Add or modify location details</p>
+                    <a href="{{ url_for('admin.manage_locations') }}" class="btn btn-info">Go</a>
                 </div>
             </div>
         </div>
